update index.css for the @media screen function, to correctly pick the right format on small screen devices

--- a/mobile.css
+++ b/mobile.css
@@ -1,3 +1,5 @@
+@media only screen and (max-width: 600px) {
+
 * {
   box-sizing: border-box;
 }
@@ -1816,4 +1818,6 @@ body {
   top: 13029px;
   left: 25px;
   overflow: hidden;
+}
+
 }
